<resources>
    <string name="app_name">SUNHOO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="delete">删除</string>
    <string name="cancel_order">取消订单</string>
    <string name="cancel">取消</string>
    <string name="phone_number">手机号</string>
    <string name="customer">客户姓名</string>
    <string name="customer_phone">客户手机</string>
    <string name="note">备注(选填)</string>
    <string name="address">地址</string>
    <string name="detail_address">详细地址</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="new_password">新密码</string>
    <string name="password_again">确认密码</string>
    <string name="login">登录</string>
    <string name="count_now">立即下单</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_sunhoo">Welcome\nto\nSUNHOO</string>
    <string name="register">注册</string>
    <string name="commit">提交</string>
    <string name="message">通知信息</string>
    <string name="finish">完成</string>
    <string name="confirm">确定</string>
    <string name="forget_password">忘记密码?</string>
    <string name="check_code">验证码</string>
    <string name="acquire_check_code">获取验证码</string>
    <string name="search_product">搜索产品</string>
    <string name="product_category">产品分类</string>
    <string name="app_update">应用更新</string>
    <string name="feedback">反馈</string>
    <string name="exit">退出登录</string>
    <string name="input_content">反馈内容</string>
    <string name="save">保存</string>
    <string-array name="province">
        <item>-省份-</item>
        <item>北京</item>
        <item>天津</item>
        <item>河北</item>
        <item>山西</item>
        <item>内蒙古</item>
        <item>辽宁</item>
        <item>吉林</item>
        <item>黑龙江</item>
        <item>上海</item>
        <item>江苏</item>
        <item>浙江</item>
        <item>安徽</item>
        <item>福建</item>
        <item>江西</item>
        <item>山东</item>
        <item>河南</item>
        <item>湖北</item>
        <item>湖南</item>
        <item>广东</item>
        <item>广西</item>
        <item>海南</item>
        <item>重庆</item>
        <item>四川</item>
        <item>贵州</item>
        <item>云南</item>
        <item>西藏</item>
        <item>陕西</item>
        <item>甘肃</item>
        <item>青海</item>
        <item>宁夏</item>
        <item>新疆</item>
        <item>台湾</item>
        <item>香港</item>
        <item>澳门</item>
    </string-array>
    <string-array name="def">
        <item>-城市-</item>
    </string-array>
    <string-array name="北京">
        <item>-城市-</item>
        <item>东城</item>
        <item>西城</item>
        <item>朝阳</item>
        <item>丰台</item>
        <item>石景山</item>
        <item>海淀</item>
        <item>门头沟</item>
        <item>房山</item>
        <item>通州</item>
        <item>顺义</item>
        <item>昌平</item>
        <item>大兴</item>
        <item>平谷</item>
        <item>怀柔</item>
        <item>密云</item>
        <item>延庆</item>
    </string-array>
    <string-array name="天津">
        <item>-城市-</item>
        <item>和平</item>
        <item>河东</item>
        <item>河西</item>
        <item>南开</item>
        <item>河北</item>
        <item>红桥</item>
        <item>滨海新区</item>
        <item>东丽</item>
        <item>西青</item>
        <item>津南</item>
        <item>北辰</item>
        <item>宁河</item>
        <item>武清</item>
        <item>静海</item>
        <item>宝坻</item>
        <item>蓟县</item>
    </string-array>
    <string-array name="河北">
        <item>-城市-</item>
        <item>石家庄</item>
        <item>唐山</item>
        <item>秦皇岛</item>
        <item>邯郸</item>
        <item>邢台</item>
        <item>保定</item>
        <item>张家口</item>
        <item>承德</item>
        <item>沧州</item>
        <item>廊坊</item>
        <item>衡水</item>
    </string-array>
    <string-array name="山西">
        <item>-城市-</item>
        <item>太原</item>
        <item>大同</item>
        <item>阳泉</item>
        <item>长治</item>
        <item>晋城</item>
        <item>朔州</item>
        <item>晋中</item>
        <item>运城</item>
        <item>忻州</item>
        <item>临汾</item>
        <item>吕梁</item>
    </string-array>
    <string-array name="内蒙古">
        <item>-城市-</item>
        <item>呼和浩特</item>
        <item>包头</item>
        <item>乌海</item>
        <item>赤峰</item>
        <item>通辽</item>
        <item>鄂尔多斯</item>
        <item>呼伦贝尔</item>
        <item>巴彦淖尔</item>
        <item>乌兰察布</item>
        <item>兴安</item>
        <item>锡林郭勒</item>
        <item>阿拉善</item>
    </string-array>
    <string-array name="辽宁">
        <item>-城市-</item>
        <item>沈阳</item>
        <item>大连</item>
        <item>鞍山</item>
        <item>抚顺</item>
        <item>本溪</item>
        <item>丹东</item>
        <item>锦州</item>
        <item>营口</item>
        <item>阜新</item>
        <item>辽阳</item>
        <item>盘锦</item>
        <item>铁岭</item>
        <item>朝阳</item>
        <item>葫芦岛</item>
    </string-array>
    <string-array name="吉林">
        <item>-城市-</item>
        <item>长春</item>
        <item>吉林</item>
        <item>四平</item>
        <item>辽源</item>
        <item>通化</item>
        <item>白山</item>
        <item>松原</item>
        <item>白城</item>
        <item>延边</item>
    </string-array>
    <string-array name="黑龙江">
        <item>-城市-</item>
        <item>哈尔滨</item>
        <item>齐齐哈尔</item>
        <item>鸡西</item>
        <item>鹤岗</item>
        <item>双鸭山</item>
        <item>大庆</item>
        <item>伊春</item>
        <item>佳木斯</item>
        <item>七台河</item>
        <item>牡丹江</item>
        <item>黑河</item>
        <item>绥化</item>
        <item>大兴安岭</item>
    </string-array>
    <string-array name="上海">
        <item>-城市-</item>
        <item>黄浦</item>
        <item>卢湾</item>
        <item>徐汇</item>
        <item>长宁</item>
        <item>静安</item>
        <item>普陀</item>
        <item>闸北</item>
        <item>虹口</item>
        <item>杨浦</item>
        <item>闵行</item>
        <item>宝山</item>
        <item>嘉定</item>
        <item>浦东新区</item>
        <item>金山</item>
        <item>松江</item>
        <item>奉贤</item>
        <item>青浦</item>
        <item>崇明</item>
    </string-array>
    <string-array name="江苏">
        <item>-城市-</item>
        <item>南京</item>
        <item>无锡</item>
        <item>徐州</item>
        <item>常州</item>
        <item>苏州</item>
        <item>南通</item>
        <item>连云港</item>
        <item>淮安</item>
        <item>盐城</item>
        <item>扬州</item>
        <item>镇江</item>
        <item>泰州</item>
        <item>宿迁</item>
    </string-array>
    <string-array name="浙江">
        <item>-城市-</item>
        <item>杭州</item>
        <item>宁波</item>
        <item>温州</item>
        <item>嘉兴</item>
        <item>湖州</item>
        <item>绍兴</item>
        <item>金华</item>
        <item>衢州</item>
        <item>舟山</item>
        <item>台州</item>
        <item>丽水</item>
    </string-array>
    <string-array name="安徽">
        <item>-城市-</item>
        <item>合肥</item>
        <item>芜湖</item>
        <item>蚌埠</item>
        <item>淮南</item>
        <item>马鞍山</item>
        <item>淮北</item>
        <item>铜陵</item>
        <item>安庆</item>
        <item>黄山</item>
        <item>滁州</item>
        <item>阜阳</item>
        <item>宿州</item>
        <item>六安</item>
        <item>亳州</item>
        <item>池州</item>
        <item>宣城</item>
    </string-array>
    <string-array name="福建">
        <item>-城市-</item>
        <item>福州</item>
        <item>厦门</item>
        <item>莆田</item>
        <item>三明</item>
        <item>泉州</item>
        <item>漳州</item>
        <item>南平</item>
        <item>龙岩</item>
        <item>宁德</item>
    </string-array>
    <string-array name="江西">
        <item>-城市-</item>
        <item>南昌</item>
        <item>景德镇</item>
        <item>萍乡</item>
        <item>九江</item>
        <item>新余</item>
        <item>鹰潭</item>
        <item>赣州</item>
        <item>吉安</item>
        <item>宜春</item>
        <item>抚州</item>
        <item>上饶</item>
    </string-array>
    <string-array name="山东">
        <item>-城市-</item>
        <item>济南</item>
        <item>青岛</item>
        <item>淄博</item>
        <item>枣庄</item>
        <item>东营</item>
        <item>烟台</item>
        <item>潍坊</item>
        <item>济宁</item>
        <item>泰安</item>
        <item>威海</item>
        <item>日照</item>
        <item>莱芜</item>
        <item>临沂</item>
        <item>德州</item>
        <item>聊城</item>
        <item>滨州</item>
        <item>菏泽</item>
    </string-array>
    <string-array name="河南">
        <item>-城市-</item>
        <item>郑州</item>
        <item>开封</item>
        <item>洛阳</item>
        <item>平顶山</item>
        <item>安阳</item>
        <item>鹤壁</item>
        <item>新乡</item>
        <item>焦作</item>
        <item>濮阳</item>
        <item>许昌</item>
        <item>漯河</item>
        <item>三门峡</item>
        <item>南阳</item>
        <item>商丘</item>
        <item>信阳</item>
        <item>周口</item>
        <item>驻马店</item>
        <item>济源</item>
    </string-array>
    <string-array name="湖北">
        <item>-城市-</item>
        <item>武汉</item>
        <item>黄石</item>
        <item>十堰</item>
        <item>宜昌</item>
        <item>襄阳</item>
        <item>鄂州</item>
        <item>荆门</item>
        <item>孝感</item>
        <item>荆州</item>
        <item>黄冈</item>
        <item>咸宁</item>
        <item>随州</item>
        <item>恩施</item>
        <item>仙桃</item>
        <item>潜江</item>
        <item>天门</item>
        <item>神农架</item>
    </string-array>
    <string-array name="湖南">
        <item>-城市-</item>
        <item>长沙</item>
        <item>株洲</item>
        <item>湘潭</item>
        <item>衡阳</item>
        <item>邵阳</item>
        <item>岳阳</item>
        <item>常德</item>
        <item>张家界</item>
        <item>益阳</item>
        <item>郴州</item>
        <item>永州</item>
        <item>怀化</item>
        <item>娄底</item>
        <item>湘西</item>
    </string-array>
    <string-array name="广东">
        <item>-城市-</item>
        <item>广州</item>
        <item>韶关</item>
        <item>深圳</item>
        <item>珠海</item>
        <item>汕头</item>
        <item>佛山</item>
        <item>江门</item>
        <item>湛江</item>
        <item>茂名</item>
        <item>肇庆</item>
        <item>惠州</item>
        <item>梅州</item>
        <item>汕尾</item>
        <item>河源</item>
        <item>阳江</item>
        <item>清远</item>
        <item>东莞</item>
        <item>中山</item>
        <item>潮州</item>
        <item>揭阳</item>
        <item>云浮</item>
    </string-array>
    <string-array name="广西">
        <item>-城市-</item>
        <item>南宁</item>
        <item>柳州</item>
        <item>桂林</item>
        <item>梧州</item>
        <item>北海</item>
        <item>防城港</item>
        <item>钦州</item>
        <item>贵港</item>
        <item>玉林</item>
        <item>百色</item>
        <item>贺州</item>
        <item>河池</item>
        <item>来宾</item>
        <item>崇左</item>
    </string-array>
    <string-array name="海南">
        <item>-城市-</item>
        <item>海口</item>
        <item>三亚</item>
        <item>三沙</item>
        <item>五指山</item>
        <item>琼海</item>
        <item>儋州</item>
        <item>文昌</item>
        <item>万宁</item>
        <item>东方</item>
        <item>定安</item>
        <item>屯昌</item>
        <item>澄迈</item>
        <item>临高</item>
        <item>白沙</item>
        <item>昌江</item>
        <item>乐东</item>
        <item>陵水</item>
        <item>保亭</item>
        <item>琼中</item>
    </string-array>
</resources>